# MLX-Flash

./: .coveragerc  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.e2e  Dockerfile.rust  LICENSE  PYPI_README.md  README.md  SOCIAL.md  docker-compose.yml  optimization_layers.json  pyproject.toml
.github/workflows/: auto-tag.yml  release.yml  security.yml  test.yml
assets/: chat.html  dashboard.html
csrc/: Makefile  fast_cache.h  fast_cache.m  libfastcache.dylib
dashboards/: mlx-flash-overview.json  prometheus.yml
dashboards/grafana-provisioning/dashboards/: dashboards.yml
docs/: ROADMAP.md  STRATEGY.md  advanced-techniques.md  architecture.md  competitive-analysis.md  deep-research.md  dflash-ddtree-integration.md  dflash-poc-results.md  dflash-training-guide.md  ecosystem-map.md  flash-moe-analysis.md  getting-started.md  honest-benchmarks.md  integrations.md  internals.md  logging.md  measured-results.md  metrics.md  mlx-analysis.md  pain-points.md  performance-gains.md  real-world-usage.md  research-survey.md  technical-reference.md
docs/superpowers/plans/: 2026-03-31-phase1-rust-sidecar-and-python-tests.md  2026-03-31-phase2-expert-cache-rust.md
docs/superpowers/specs/: 2026-03-31-rust-sidecar-design.md
homebrew/: mlx-flash.rb
mlx-flash-server/: Cargo.toml
mlx-flash-server/src/: chat_ui.rs  cli_chat.rs  dashboard.rs  expert_store.rs  log_buffer.rs  main.rs  mcp.rs  memory.rs  protocol.rs  proxy.rs  server.rs  socket_server.rs  worker_pool.rs
mlx-flash-server/src/cache/: lcp.rs  mod.rs  prefetch.rs
mlx_flash_compress/: __init__.py  __main__.py  advanced_prefetch.py  bench.py  bench_advanced.py  bench_e2e.py  bench_encoding.py  bench_final.py  bench_gemma4.py  bench_memory_pressure.py  bench_real.py  bit_parity.py  cache.py  cached_inference.py  chat.py  compression.py  compression_native.py  config.py  continuous_batching.py  ddtree.py  demo_warmup.py  dflash.py  dflash_model.py  dflash_profile.py  distributed_experts.py  draft_expert_prefetch.py  eagle3.py  engine.py  entropy_coding.py  expert_encoding.py  expert_merging.py  expert_pruning.py  expert_streaming.py  fast_cache_bindings.py  hardware.py  hf_calculator.py  kv_cache_backend.py  kv_cache_sharing.py  kv_compression.py  layer_quantization.py  (+32 more)
mlx_flash_compress/kernels/: __init__.py  flash_dequant.metal  loader.py  ops.py
scripts/: bench-optimization-layers.py  bench_active_layers.py  bench_cache_cost.py  bench_deepseek_v4_flash.py  bench_dflash_opts.py  bench_draft_count.py  bench_drafter_quant.py  bench_layer_pruning.py  bench_multi_profile.py  bench_new_features.py  bench_profiles.py  bench_sdpa.py  bench_trim_verify.py  load_test_batching.py  models.yaml  run-e2e.sh  run_dflash_poc.py  train_dflash_drafter.py  verify_trim_quality.py
tests/: e2e_cache_roundtrip.py  test_advanced_prefetch.py  test_bit_parity.py  test_cache.py  test_cache_unit.py  test_cached_inference.py  test_chat_auto_select.py  test_compression.py  test_compression_native.py  test_config_hw_ssd.py  test_continuous_batching.py  test_ddtree.py  test_demo_warmup.py  test_dflash.py  test_dflash_acceptance.py  test_dflash_ddtree.py  test_dflash_model.py  test_dflash_profile.py  test_distributed_experts.py  test_distributed_kv_calc.py  test_draft_expert_prefetch.py  test_eagle3.py  test_engine.py  test_entropy_coding.py  test_expert_merging.py  test_expert_pruning.py  test_expert_streaming.py  test_fast_cache_bindings.py  test_hardware.py  test_hf_calculator.py  test_imports.py  test_integration.py  test_kernel_ops.py  test_kernels.py  test_kv_cache_backend.py  test_kv_cache_sharing.py  test_kv_compression.py  test_layer_quantization.py  test_layerskip.py  test_lcp_cache.py  (+36 more)
