[project]
name = "mlx-flash-compress"
version = "0.1.0"
description = "Tiered compressed expert cache for MoE inference on Apple Silicon — MLX + Flash-MoE architecture"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "mlx>=0.24.0",
    "mlx-lm>=0.22.0",
    "lz4>=4.3.0",
    "zstandard>=0.23.0",
    "numpy>=1.24.0",
    "huggingface-hub>=0.20.0",
    "safetensors>=0.4.0",
    "psutil>=5.9.0",
    "tabulate>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-benchmark>=4.0",
]

[project.scripts]
mlx-flash-bench = "mlx_flash_compress.bench:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
